--- a/index.html
+++ b/index.html
@@ -47,10 +47,40 @@
                 </div>
             </div>
             <div class="search ">
-                <div class="dropdown">
-                    <a href="">
-                        <p>All</p>
-                    </a>
+                <div class="dropdown" id="drop-menu">
+              
+                        <p>All <i class="fa-solid fa-caret-down"></i>
+                         <ul class="drop-list drop-visible" id="drop-list">
+                            <li><p>All Departments</p></li>
+                            <li><p>Arts & Craft</p></li>
+                            <li><p>Automotive</p></li>
+                            <li><p>Baby</p></li>
+                            <li><p>Beauty and Personal Care</p></li>
+                            <li><p>Books</p></li>
+                            <li><p>Boy's Fashion</p></li>
+                            <li><p>Computer</p></li>
+                            <li><p>Deals</p></li>
+                            <li><p>Digital Music</p></li>
+                            <li><p>Electronics</p></li>
+                            <li><p>Girl's Fashion</p></li>
+                            <li><p>Health & Household</p></li>
+                            <li><p>Home & Kitchen</p></li>
+                            <li><p>Industrial & Scientific</p></li>
+                            <li><p>Kindle Store</p></li>
+                            <li><p>Luggage</p></li>
+                            <li><p>Men's Fashion</p></li>
+                            <li><p>Movies & TV's</p></li>
+                            <li><p>Pet Supplies </p></li>
+                            <li><p>Prime Videos</p></li>
+                            <li><p>Software</p></li>
+                            <li><p>Sports & Outdoor</p></li>
+                            <li><p>Tools & Home Improvement</p></li>
+                            <li><p>Toys & Games</p></li>
+                            <li><p>Video Games</p></li>
+                            <li><p>Women's Fashion</p></li>
+                         </ul>
+                        </p>
+                  
                 </div>
                 <div class="search-place ">
                     <input type="text" placeholder="Search Amazon">
